--- a/RAG_Test.ipynb
+++ b/RAG_Test.ipynb
@@ -71314,7 +71314,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asd"
+   ]
   }
  ],
  "metadata": {
